--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             const now = new Date();
             const currentUTCDateTime = now.toISOString();
             let _subject = "From Tech edilite client " + currentUTCDateTime
-            var mailtoLink = 'mailto:cloudspace@gmail.com?subject=' + _subject + '&body=' +
+            var mailtoLink = 'mailto:techedilite@gmail.com?subject=' + _subject + '&body=' +
                 'Name: ' + document.getElementById('subject').value + '%0A' +
                 'Message: ' + document.getElementById('message').value;
 
