--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </div>
 
                 <!-- Designing -->
-                <div class="bg-white p-6 rounded-lg shadow-md" style="background-color: #dedfdf;">
+                <div class="bg-white p-6 rounded-lg shadow-md" style="background-color: #ffff;">
                     <video width="350" height="200" autoplay loop muted
                         class="w-full h-48 object-cover mb-4 rounded-lg">
                         <source src="webDesign.mp4" type="video/mp4">
@@ -143,7 +143,7 @@
                 </div>
 
                 <!-- Content Writing -->
-                <div class="bg-white p-6 rounded-lg shadow-md" style="background-color: #dedfdf;">
+                <div class="bg-white p-6 rounded-lg shadow-md" style="background-color: #ffff;">
                     <video width="350" height="200" autoplay loop muted
                         class="w-full h-48 object-cover mb-4 rounded-lg">
                         <source src="contentDesign.mp4" type="video/mp4">
