--- a/pricing.html
+++ b/pricing.html
@@ -203,7 +203,7 @@
     </div>
     <section id="contact" class="bg-white dark:bg-gray-900">
         <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
-            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white" style="color: #fff; font-size: 28px;">Contact Us</h2>
+            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white" style="font-size: 28px;">Contact Us</h2>
             <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl" style="font-size: 19px;">If you’re interested in our services or have any specific requirements, please reach out to us for a personalized quotation. We will get back to you with good news.</p>
             <form id="contactForm" action="#" class="space-y-8">
                 <div>
