--- a/pricing.html
+++ b/pricing.html
@@ -228,7 +228,7 @@
                     <a href="#" class="hover:underline me-4 md:me-6">Mail Us</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">Twitter</a>
+                    <a href="https://x.com/TechEdilite" class="hover:underline me-4 md:me-6">Twitter</a>
                 </li>
                 <li>
                     <a href="#" class="hover:underline me-4 md:me-6">Instagram</a>
