--- a/pricing.html
+++ b/pricing.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+        <link rel="icon" type="image/png" href="./favTE.png"/>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechEdilite</title>
     <script src="https://cdn.tailwindcss.com"></script>
