--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                     <a href="https://x.com/TechEdilite" target="_blank" rel="noopener noreferrer" class="hover:underline me-4 md:me-6">Twitter</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">Instagram</a>
+                    <a href="https://www.instagram.com/techedilite/" class="hover:underline me-4 md:me-6">Instagram</a>
                 </li>
             </ul>
         </div>
