--- a/pricing.html
+++ b/pricing.html
@@ -528,10 +528,10 @@
                     <a href="#" class="hover:underline me-4 md:me-6">Mail Us</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">Twitter</a>
+                    <a href="https://x.com/TechEdilite" class="hover:underline me-4 md:me-6">Twitter</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">Instagram</a>
+                    <a href="https://www.instagram.com/techedilite/" class="hover:underline me-4 md:me-6">Instagram</a>
                 </li>
             </ul>
         </div>
