--- a/pricing.html
+++ b/pricing.html
@@ -184,30 +184,32 @@
                             Fixed Rate
                         </td>
                         <td class="px-6 py-4">
-                            ₹2999
+                            Contact us
                         </td>
                     </tr>
                     <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
                         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                            Website with functionality
+                            E-Commerce
                         </th>
                         <td class="px-6 py-4">
                             Variable
                         </td>
                         <td class="px-6 py-4">
-                            Starting from ₹5000
+                            Contact us
+                            <!-- Starting from ₹-- -->
                         </td>
                     </tr>
                     <tr class="bg-white dark:bg-gray-800">
                         <th scope="row" data-popover-target="popover-default"
                             class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white cursor-pointer">
-                            Web 3 enabled website
+                            Web 3 Projects
                         </th>
                         <td class="px-6 py-4">
                             Variable
                         </td>
                         <td class="px-6 py-4">
-                            Starting from ₹5200
+                            Contact us
+                            <!-- Starting from ₹5200 -->
                         </td>
                     </tr>
                 </tbody>
