--- a/solutions.html
+++ b/solutions.html
@@ -168,7 +168,7 @@
                     <div
                         class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
                     </div>
-                    <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Day 1-2</time>
+<!--                     <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Day 1-2</time> -->
                     <h3 class="text-lg font-semibold text-gray-900 dark:text-blue-500">Design Development</h3>
                     <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">Create a visually appealing and
                         functional design tailored to your business needs.</p>
@@ -180,7 +180,7 @@
                     <div
                         class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
                     </div>
-                    <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Day 3-5</time>
+<!--                     <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Day 3-5</time> -->
                     <h3 class="text-lg font-semibold text-gray-900 dark:text-blue-500">Website Development</h3>
                     <p class="text-base font-normal text-gray-500 dark:text-gray-400">Build a fully functional website based
                         on the approved design.</p>
@@ -189,7 +189,7 @@
                     <div
                         class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
                     </div>
-                    <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Day 6-7</time>
+<!--                     <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Day 6-7</time> -->
                     <h3 class="text-lg font-semibold text-gray-900 dark:text-blue-500">Demo and Suggestions</h3>
                     <p class="text-base font-normal text-gray-500 dark:text-gray-400">Present the website to the client and
                         gather feedback for final adjustments.</p>
