--- a/solutions.html
+++ b/solutions.html
@@ -74,7 +74,7 @@
 
     <nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="https://techedilite.github.io/techEdilite/#"
+            <a href="https://www.techedilite.co/"
                 class="flex items-center space-x-3 rtl:space-x-reverse">
                 <img src="./logo.png" class="h-8" alt="Tech Edilite Logo" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
