--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
     <div id="google_translate_element" class="google-translate"></div>
 
-    <nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700">
+    <nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700 sticky top-0 z-50">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-3">
             <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
                 <img src="./logo.png" class="h-8" alt="Tech Edilite Logo" />
@@ -641,7 +641,20 @@
             Button
         </a> -->
 
-
+        <section class="" style="background-image: url('./hreo22.png');" id="section2">
+            <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
+                <div class="font-light text-gray-500 sm:text-lg dark:">
+                    <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900">We undertake meaningful initiatives</h2>
+                    <p class="mb-4">After successfully completing each project, we allocate a portion of the proceeds to support orphaned schools. At Tech Edilite, we believe in nurturing young, talented individuals and fostering a mindset dedicated to contributing to the well-being of humanity. Together, we can empower these bright children to utilize their incredible abilities for a better future.</p>
+                </div>
+                <div class="grid grid-cols-2 gap-4 mt-8">
+                    <img class="w-full rounded-lg" src="./int1.png" alt="office content 1">
+                    <img class="mt-4 w-full lg:mt-10 rounded-lg" src="./init2.png" alt="office content 2">
+                </div>
+            </div>
+            <hr>
+    
+        </section>
         <section id="contact" class="bg-white dark:bg-gray-900">
             <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
                 <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white"
@@ -944,6 +957,7 @@
                 </form>
             </div>
         </section>
+    
         <!-- footer -->
         <footer class="bg-white shadow dark:bg-gray-800">
             <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
