--- a/solutions.html
+++ b/solutions.html
@@ -158,8 +158,8 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="bg-white p-6 rounded-lg shadow-md">
-                            <h2 class="text-3xl font-bold mb-4 text-primary" style="font-size: 20px; text-align: center;">InvenTrack</h2>
-                            <p class="text-gray-700 mb-4" style="font-size: 16px; line-height: 25px;">Effortlessly manage your inventory with InventoryMaster. Store records, track stock levels in real-time, and manage orders with ease. Gain valuable insights through detailed analytics, optimize your operations, and reduce costs with our intuitive, all-in-one solution.</p>
+                            <h2 class="text-3xl font-bold mb-4 text-primary" style="font-size: 20px; text-align: center;">ConnectED</h2>
+                            <p class="text-gray-700 mb-4" style="font-size: 16px; line-height: 25px;">ConnectED is a chat app designed for schools, enabling safe and effective communication between teachers and students. With features that protect against verbal abuse and promote positive interactions, our platform fosters a respectful environment. Educators and students can easily engage in academic discussions, share resources, and collaborate—all in one secure space. Whether for classroom announcements or study groups, ConnectED helps build a connected and supportive educational community. Join us in enhancing learning together!.</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
