--- a/solutions.html
+++ b/solutions.html
@@ -89,9 +89,9 @@
 <body class="bg-gray-100 text-gray-800" style="font-family: 'Exo', sans-serif; font-size: 15px; color: #003db6;">
     <div id="google_translate_element" class="google-translate"></div>
 
-    <nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700">
+    <nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700 sticky top-0 z-50">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="https://www.techedilite.co/"
+            <a href="https://techedilite.github.io/techEdilite/#"
                 class="flex items-center space-x-3 rtl:space-x-reverse">
                 <img src="./logo.png" class="h-8" alt="Tech Edilite Logo" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
@@ -111,7 +111,7 @@
                 <ul
                     class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
                     <li>
-                        <a href="https://www.techedilite.co"
+                        <a href="https://techedilite.github.io/techEdilite/#"
                             class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent"
                             aria-current="page">Home</a>
                     </li>
@@ -158,8 +158,8 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="bg-white p-6 rounded-lg shadow-md">
-                            <h2 class="text-3xl font-bold mb-4 text-primary" style="font-size: 20px; text-align: center;">ConnectED</h2>
-                            <p class="text-gray-700 mb-4" style="font-size: 16px; line-height: 25px;">ConnectED is a chat app designed for schools, enabling safe and effective communication between teachers and students. With features that protect against verbal abuse and promote positive interactions, our platform fosters a respectful environment. Educators and students can easily engage in academic discussions, share resources, and collaborate—all in one secure space. Whether for classroom announcements or study groups, ConnectED helps build a connected and supportive educational community. Join us in enhancing learning together!.</p>
+                            <h2 class="text-3xl font-bold mb-4 text-primary" style="font-size: 20px; text-align: center;">InvenTrack</h2>
+                            <p class="text-gray-700 mb-4" style="font-size: 16px; line-height: 25px;">InventoryMaster helps you efficiently manage inventory, track stock in real-time, and handle orders. Get valuable insights, optimize operations, and reduce costs with our intuitive solution. Powered by AI agents giving insights on imporvement and boosting sales</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -563,7 +563,7 @@
     <!-- footer -->
     <footer class="bg-white shadow dark:bg-gray-800">
         <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-            <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="https://flowbite.com/"
+            <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a href="https://flowbite.com/"
                     class="hover:underline">Tech Edilite</a>. All Rights Reserved.
             </span>
             <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
