--- a/index.html
+++ b/index.html
@@ -222,28 +222,7 @@
    <!-- Hero Section -->
    <section class="relative h-[75vh]">
     <!-- Modal -->
-    <div id="default-modal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed inset-0 z-50 flex justify-center items-center w-full h-full">
-        <div class="relative p-4 w-full max-w-2xl max-h-full">
-            <!-- Modal content -->
-            <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-                <!-- Close button (X) -->
-                <button id="close-modal-button" class="absolute top-4 right-4 text-white text-2xl font-bold hover:bg-gray-200 rounded-full p-1">
-                    &times;
-                </button>
-                
-                <iframe
-                    src="https://lu.ma/embed/event/evt-NreoG1jdB1aRLEq/simple"
-                    width="100%"
-                    height="650"
-                    frameborder="0"
-                    style="border: 1px solid #bfcbda88; border-radius: 4px;"
-                    allowfullscreen=""
-                    aria-hidden="false"
-                    tabindex="0"
-                ></iframe>
-            </div>
-        </div>
-    </div>
+
 
     <!-- Video Background -->
     <video autoplay loop muted class="absolute inset-0 w-full h-full object-cover video-desktop">
@@ -1025,8 +1004,10 @@
         <footer class="bg-white shadow dark:bg-gray-800">
             <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
                 <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a
-                        href="https://flowbite.com/" class="hover:underline">Tech Edilite</a>. All Rights Reserved.
+                        href="https://flowbite.com/" class="hover:underline">TECHEDILITE</a>. All Rights Reserved.
                 </span>
+                <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">GSTIN: 33AHDPF3055GIZV 
+            </span>
                 <ul
                     class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
                     <li>
