--- a/solutions.html
+++ b/solutions.html
@@ -562,23 +562,27 @@
     </section>
     <!-- footer -->
     <footer class="bg-white shadow dark:bg-gray-800">
-        <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-            <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a href="https://flowbite.com/"
-                    class="hover:underline">Tech Edilite</a>. All Rights Reserved.
+            <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+                <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a
+                        href="https://flowbite.com/" class="hover:underline">TECHEDILITE</a>. All Rights Reserved.
+                </span>
+                <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">GSTIN: 33AHDPF3055GIZV 
             </span>
-            <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
-                <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">Mail Us</a>
-                </li>
-                <li>
-                    <a href="https://x.com/TechEdilite" class="hover:underline me-4 md:me-6">Twitter</a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/techedilite/" class="hover:underline me-4 md:me-6">Instagram</a>
-                </li>
-            </ul>
-        </div>
-    </footer>
+                <ul
+                    class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+                    <li>
+                        <a href="#" class="hover:underline me-4 md:me-6">Mail Us</a>
+                    </li>
+                    <li>
+                        <a href="https://x.com/TechEdilite" class="hover:underline me-4 md:me-6">Twitter</a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/techedilite/"
+                            class="hover:underline me-4 md:me-6">Instagram</a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
     <!-- JavaScript for mobile menu toggle -->
     <script>
         document.getElementById('mobile-menu-button').addEventListener('click', function () {
