--- a/solutions.html
+++ b/solutions.html
@@ -562,7 +562,42 @@
     </section>
     <!-- footer -->
     <footer class="bg-white shadow dark:bg-gray-800">
-            <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+            <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
+                <div class="sm:flex sm:items-center sm:justify-between">
+                    <p class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
+                        <!-- <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" /> -->
+                        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">GSTIN: 33AHDPF3055G1ZV</span>
+                    </p>
+                    <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
+                        <!-- <p>GSTIN: 33AHDPF3055GIZV </p> -->
+
+                        <!-- <li>
+                            <!-- <a href="#" class="hover:underline me-4 md:me-6">About</a> -->
+                        <li>
+                            <a href="#" class="hover:underline me-4 md:me-6">Mail Us</a>
+                        </li>
+                        <li>
+                            <a href="https://x.com/TechEdilite" class="hover:underline me-4 md:me-6">Twitter</a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/techedilite/"
+                                class="hover:underline me-4 md:me-6">Instagram</a>
+                        </li>
+                        <!-- <li>
+                            <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+                        </li>
+                        <li>
+                            <a href="#" class="hover:underline">Contact</a>
+                        </li> -->
+                    </ul>
+                </div>
+                <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+                <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a href="/" class="hover:underline">TECHEDILITE</a>. All Rights Reserved.</span>
+            </div>
+            <!-- <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
                 <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a
                         href="https://flowbite.com/" class="hover:underline">TECHEDILITE</a>. All Rights Reserved.
                 </span>
@@ -581,7 +616,7 @@
                             class="hover:underline me-4 md:me-6">Instagram</a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </footer>
     <!-- JavaScript for mobile menu toggle -->
     <script>
