--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700 sticky top-0 z-50">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-3">
             <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img src="./newLogo4243.png" class="h-8" alt="Tech Edilite Logo" />
+                <img src="./logo.png" class="h-8" alt="Tech Edilite Logo" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
                     style="font-size: 20px;">Tech Edilite</span>
             </a>
