--- a/index.html
+++ b/index.html
@@ -574,12 +574,15 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     <div class="bg-white p-4 rounded-lg shadow-md">
                         <video autoplay loop muted class="w-full h-36 object-cover mb-4 rounded-lg">
-                            <source src="./Edilite TechV.mp4" type="video/mp4">
+                            <source src="./liveSoon.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
-                        <h3 class="text-xl font-bold mb-1" style="font-size: 18px; text-align: center;">Edilite Tech
-                        </h3>
-                        <p class="text-gray-600" style="text-align: center;">Software Solutions Consulting Firm</p>
+                        <a href="http://starschool.42web.io/?i=1" target="_blank" rel="noopener noreferrer">
+                            <h3 class="text-xl font-bold mb-1" style="font-size: 18px; text-align: center;">
+                                Star School CBSE</h3>
+                        </a>
+                        <!-- <h3 class="text-xl font-bold mb-1" style="font-size: 18px; text-align: center;">Star School</h3> -->
+                        <p class="text-gray-600" style="text-align: center;">Live soon</p>
                     </div>
                     <div class="bg-white p-4 rounded-lg shadow-md">
                         <video autoplay loop muted class="w-full h-36 object-cover mb-4 rounded-lg">
@@ -590,16 +593,19 @@
                             <h3 class="text-xl font-bold mb-1" style="font-size: 18px; text-align: center;">Cloudscape
                                 Construction</h3>
                         </a>
-                        <p class="text-gray-600" style="text-align: center;">Building with innovation.</p>
+                        <p class="text-gray-600" style="text-align: center;">under development</p>
                     </div>
                     <div class="bg-white p-4 rounded-lg shadow-md">
                         <video autoplay loop muted class="w-full h-36 object-cover mb-4 rounded-lg">
-                            <source src="./liveSoon.mp4" type="video/mp4">
+                            <source src="./Edilite TechV.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
-                        <h3 class="text-xl font-bold mb-1" style="font-size: 18px; text-align: center;">Star School</h3>
-                        <p class="text-gray-600" style="text-align: center;">Live soon</p>
+                        <h3 class="text-xl font-bold mb-1" style="font-size: 18px; text-align: center;">Edilite Tech
+                        </h3>
+                        <p class="text-gray-600" style="text-align: center;">Software Solutions Consulting Firm</p>
                     </div>
+                    
+                  
                 </div>
             </div>
             <br>
