--- a/solutions.html
+++ b/solutions.html
@@ -158,20 +158,20 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="bg-white p-6 rounded-lg shadow-md">
-                            <h2 class="text-3xl font-bold mb-4 text-primary" style="font-size: 20px; text-align: center;">InvenTrack</h2>
-                            <p class="text-gray-700 mb-4" style="font-size: 16px; line-height: 25px;">InventoryMaster helps you efficiently manage inventory, track stock in real-time, and handle orders. Get valuable insights, optimize operations, and reduce costs with our intuitive solution. Powered by AI agents giving insights on imporvement and boosting sales</p>
+                            <h2 class="text-3xl font-bold mb-4 text-primary" style="font-size: 20px; text-align: center;">Unite Pulse</h2>
+                            <p class="text-gray-700 mb-4" style="font-size: 16px; line-height: 25px;">Unite Pulse is an automated attendance management software designed to streamline and simplify workforce management for organizations. With seamless onboarding and quick integration, it effortlessly adapts to your business. Powered by AI, it offers insightful analytics and features an advanced biometric/face detection system for accurate and secure attendance tracking. Say goodbye to manual processes and embrace a smarter, more efficient way to manage employee attendance.</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="bg-white p-6 rounded-lg shadow-md">
-                            <h2 class="text-3xl font-bold mb-4 text-primary" style="font-size: 20px; text-align: center;">Nexus</h2>
-                            <p class="text-gray-700 mb-4" style="font-size: 16px; line-height: 25px;">Nexus simplifies student management with seamless record storage, real-time tracking, and intuitive order management. Access detailed analytics and enhance your institution’s efficiency with our user-friendly solution.</p>
+                            <h2 class="text-3xl font-bold mb-4 text-primary" style="font-size: 20px; text-align: center;">ConnectED</h2>
+                            <p class="text-gray-700 mb-4" style="font-size: 16px; line-height: 25px;">ConnectED is an app specifically designed for educational institutions, providing a centralized platform to manage user records in one place. It offers seamless communication through messaging and voice calls, backed by AI to ensure a safe and secure communication environment. With blockchain technology, ConnectED stores immutable records, maintaining privacy and ensuring data integrity. The app keeps institutions, parents, and consumers up-to-date with essential information, including records, transportation details, and attendance, offering clear and efficient updates for everyone involved.</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="bg-white p-6 rounded-lg shadow-md">
-                            <h2 class="text-3xl font-bold mb-4 text-primary" style="font-size: 20px; text-align: center;">E-Commerce Solution</h2>
-                            <p class="text-gray-700 mb-4" style="font-size: 16px; line-height: 25px;">Expand your business with our e-commerce solution. Reach global customers, streamline your sales process, and manage your online store effortlessly. Boost your revenue and visibility with our easy-to-use, comprehensive platform.</p>
+                            <h2 class="text-3xl font-bold mb-4 text-primary" style="font-size: 20px; text-align: center;">Tech Edilite Capella </h2>
+                            <p class="text-gray-700 mb-4" style="font-size: 16px; line-height: 25px;">Tech Edilite Capella is a super lightweight application designed to manage inventory operations digitally. It minimizes risks, ensures rock-solid data storage for future review, and efficiently handles stock management. By reducing human errors and streamlining business operations, it provides a smarter, more effective way to track and manage inventory, making your business run smoother and more accurately. Additionally, it is partially backed by blockchain technology and cryptography, ensuring data integrity and maintaining privacy, giving you peace of mind while managing your inventory.</p>
                         </div>
                     </div>
                 </div>
