--- a/index.html
+++ b/index.html
@@ -5,14 +5,70 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="./favTE.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechEdilite</title>
+
+    <!-- Title Tag (SEO) -->
+    <title>TechEdilite | Software Development Firm</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="TechEdilite is a top-tier software development firm offering web and mobile application development, custom software solutions, and IT consulting to help businesses scale." />
+    <meta name="keywords" content="software development, custom software, web development, mobile app development, IT services, tech solutions, business software" />
+    <meta name="author" content="TechEdilite">
+
+    <!-- Open Graph Meta Tags for Social Media Sharing -->
+    <meta property="og:title" content="TechEdilite | Software Development Firm" />
+    <meta property="og:description" content="TechEdilite provides cutting-edge software development services including web development, mobile apps, and IT consulting to drive business growth." />
+    <meta property="og:image" content="./favTE.png" />
+    <meta property="og:url" content="https://www.techedilite.com" />
+    <meta property="og:type" content="website" />
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="TechEdilite | Software Development Firm" />
+    <meta name="twitter:description" content="TechEdilite provides software development services including web development, mobile apps, and IT consulting for businesses." />
+    <meta name="twitter:image" content="./favTE.png" />
+    <meta name="twitter:url" content="https://www.techedilite.com" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./favTE.png" />
+
+    <!-- External CSS and Scripts -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
-        <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "TechEdilite",
+            "url": "https://www.techedilite.com",
+            "logo": "./favTE.png",
+            "sameAs": [
+                "https://www.facebook.com/TechEdilite",
+                "https://twitter.com/TechEdilite",
+                "https://www.linkedin.com/company/TechEdilite"
+            ],
+            "contactPoint": {
+                "@type": "ContactPoint",
+                "telephone": "+1-800-123-4567",
+                "contactType": "Customer Service"
+            },
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "123 TechEdilite St.",
+                "addressLocality": "Tech City",
+                "addressRegion": "TX",
+                "postalCode": "12345",
+                "addressCountry": "US"
+            }
+        }
+    </script>
+
+    <!-- Additional Custom Styles -->
     <style>
         .scroll-button {
             position: fixed;
@@ -26,12 +82,10 @@
             cursor: pointer;
             font-size: 15px;
             z-index: 1000;
-            /* Ensure it's on top of other elements */
         }
 
         .content {
             height: 2000px;
-            /* Ensure there's enough content to scroll */
             padding: 20px;
             text-align: center;
         }
@@ -113,9 +167,7 @@
             display: inline-block;
             vertical-align: middle;
             height: 24px;
-            /* Adjust the height as needed */
             width: auto;
-            /* Adjust the width as needed */
             overflow: hidden;
         }
 
@@ -155,9 +207,10 @@
         .animate-slide {
             animation: slide 20s linear infinite;
         }
-        
     </style>
+
 </head>
+
 
 <body class="bg-gray-100 text-gray-800" style="font-family: 'Exo', sans-serif; font-size: 15px; color: #003db6;">
 
